# head-first-c

./: .gitignore  CMakeLists.txt
ch1/: cards  cards.c  loop.c
ch10/: CMakeLists.txt  cal_score.c  kill_signal.c
ch11/: server.c
ch12/: CMakeLists.txt  create_thread.c  thread_mutex.c
ch2/: fget_input.c  scanf_input.c  str_pass.c  value_pass.c  variable_addr.c
ch2.5/: CMakeLists.txt  reverse.c  tracks.c
ch3/: CMakeLists.txt  bermuda.c  json_formatter.c  multi_in_and_out.c  pizza.c
ch4/: CMakeLists.txt  data_type.c  enc.h  file_enc.c  price.c  totaller.h  xor_enc.c
ch5/: CMakeLists.txt  aquaria.c  aquaria_survey.c  coffer_decipher.c  fruit_shop.c  margarita.c
ch6/: CMakeLists.txt  islands.c  spies.c
ch7/: CMakeLists.txt  compare.c  find_the_guy.c  reply.c  var_args.c
ch8/: CMakeLists.txt  checksum.c  elliptical.c  encrypt.c  hfcal.c  hfcal_uk.c  messenger.c
ch9/: CMakeLists.txt  execution.c  output_timestamp.c
data/: data_in.csv  data_out.csv
exec/: bermuda  json
head_files/: checksum.h  encrypt.h  hfcal.h
