cmake_minimum_required(VERSION 3.2)

project(head_first_c)

set(CMAKE_C_STANDARD  99)

ADD_SUBDIRECTORY(ch2.5)
ADD_SUBDIRECTORY(ch3)
ADD_SUBDIRECTORY(ch4)
ADD_SUBDIRECTORY(ch5)
ADD_SUBDIRECTORY(ch6)
ADD_SUBDIRECTORY(ch7)
ADD_SUBDIRECTORY(ch8)
ADD_SUBDIRECTORY(ch9)
ADD_SUBDIRECTORY(ch10)
ADD_SUBDIRECTORY(ch11)
ADD_SUBDIRECTORY(ch12)